"""
Log file compression
"""

from pathlib import Path
import gzip
import zipfile


class Compression:
    """Compress log files"""
    
    def __init__(self, format: str = "gz"):
        self.format = format
        
    def compress(self, file_path: Path) -> Path:
        """Compress a file"""
        if self.format == "gz":
            return self._compress_gzip(file_path)
        elif self.format == "zip":
            return self._compress_zip(file_path)
        else:
            raise ValueError(f"Unsupported compression format: {self.format}")
    
    def _compress_gzip(self, file_path: Path) -> Path:
        """Compress using gzip"""
        # TODO: Implement gzip compression
        pass
    
    def _compress_zip(self, file_path: Path) -> Path:
        """Compress using zip"""
        # TODO: Implement zip compression
        pass
