"""
Formatting classes for log output
"""

from typing import Any, List, Dict, Optional


class Token:
    """Represents a token in a format string"""
    
    def __init__(self, token_type: str, value: str, field_name: str = None, format_spec: str = None):
        self.type = token_type  # 'literal' or 'field'
        self.value = value
        self.field_name = field_name
        self.format_spec = format_spec


class Formatter:
    """Format log records into strings"""
    
    def __init__(self, format_string: str, colorize: bool = True):
        self.format_string = format_string
        self.colorize = colorize
        self.tokens: List[Token] = []
        self.colorizer = Colorizer(enabled=colorize)
        
    def format(self, record) -> str:
        """Format a log record"""
        # TODO: Implement formatting logic
        return str(record)
    
    def parse_format_string(self) -> List[Token]:
        """Parse format string into tokens"""
        # TODO: Implement parsing
        return []
    
    def get_field_value(self, record, field_name: str) -> Any:
        """Extract field value from record"""
        # TODO: Implement field extraction
        return None


class Colorizer:
    """Handle ANSI color codes"""
    
    def __init__(self, enabled: bool = True):
        self.enabled = enabled
        self.colors = {
            'black': '[30m',
            'red': '[31m',
            'green': '[32m',
            'yellow': '[33m',
            'blue': '[34m',
            'magenta': '[35m',
            'cyan': '[36m',
            'white': '[37m',
            'reset': '[0m',
        }
    
    def colorize(self, text: str, color: str) -> str:
        """Apply color to text"""
        if not self.enabled:
            return text
        # TODO: Implement colorization
        return text
    
    def strip_colors(self, text: str) -> str:
        """Remove color codes from text"""
        # TODO: Implement color stripping
        return text


class ExceptionFormatter:
    """Format exception tracebacks"""
    
    def __init__(self, colorize: bool = True, backtrace: bool = True, diagnose: bool = False):
        self.colorize = colorize
        self.backtrace = backtrace
        self.diagnose = diagnose
        
    def format_exception(self, exc_info) -> str:
        """Format exception information"""
        # TODO: Implement exception formatting
        return ""
    
    def format_traceback(self, tb) -> str:
        """Format traceback"""
        # TODO: Implement traceback formatting
        return ""
    
    def get_context_lines(self, filename: str, lineno: int, context: int = 5) -> List[str]:
        """Get source code context around line"""
        # TODO: Implement context extraction
        return []
