"""
Handler classes for different output destinations
"""

from abc import ABC, abstractmethod
from typing import Any, Callable, Optional


class Handler(ABC):
    """Base handler class"""
    
    def __init__(self, sink: Any, level: str, **options):
        self.id: int = 0
        self.sink: Any = sink
        self.level: str = level
        self.options: dict = options
        
    @abstractmethod
    def emit(self, record) -> None:
        """Emit a log record"""
        pass
    
    def should_emit(self, record) -> bool:
        """Check if this handler should emit the record"""
        # TODO: Implement level and filter checking
        return True
    
    def format(self, record) -> str:
        """Format a log record"""
        # TODO: Implement formatting
        return str(record)
    
    def close(self) -> None:
        """Close the handler"""
        pass


class StreamHandler(Handler):
    """Handler for stream output (console)"""
    
    def emit(self, record) -> None:
        """Write to stream"""
        # TODO: Implement stream writing
        pass


class FileHandler(Handler):
    """Handler for file output"""
    
    def __init__(self, path: str, level: str, **options):
        super().__init__(path, level, **options)
        self.path = path
        self.file_handle = None
        
    def emit(self, record) -> None:
        """Write to file"""
        # TODO: Implement file writing
        pass
    
    def rotate(self) -> None:
        """Rotate the log file"""
        # TODO: Implement rotation
        pass
    
    def close(self) -> None:
        """Close the file handle"""
        if self.file_handle:
            self.file_handle.close()


class CallableHandler(Handler):
    """Handler for callable/function output"""
    
    def emit(self, record) -> None:
        """Call the function with the record"""
        # TODO: Implement callable execution
        pass


class AsyncHandler(Handler):
    """Handler with async queue support"""
    
    def __init__(self, wrapped_handler: Handler):
        self.wrapped_handler = wrapped_handler
        self.queue = None  # TODO: Initialize queue
        self.worker_thread = None
        
    def emit(self, record) -> None:
        """Add record to queue"""
        # TODO: Implement queue-based emission
        pass
    
    def start_worker(self) -> None:
        """Start the worker thread"""
        # TODO: Implement worker thread
        pass
    
    def stop_worker(self) -> None:
        """Stop the worker thread"""
        # TODO: Implement worker stop
        pass
