"""
Core Logger class implementation
"""

from typing import Any, Callable, Dict, List, Optional, Union
from datetime import datetime
import threading
import sys


class Logger:
    """Main logger class"""
    
    def __init__(self):
        self.handlers: List[Any] = []
        self.levels: Dict[str, Any] = {}
        self.extra: Dict[str, Any] = {}
        self.start_time: datetime = datetime.now()
        self._handler_id_counter: int = 0
        self._lock = threading.Lock()
        
    def add(self, sink: Any, **options) -> int:
        """Add a handler to the logger"""
        # TODO: Implement handler addition
        pass
    
    def remove(self, handler_id: int) -> None:
        """Remove a handler by ID"""
        # TODO: Implement handler removal
        pass
    
    def trace(self, message: str, *args, **kwargs) -> None:
        """Log a trace message"""
        self._log("TRACE", message, *args, **kwargs)
    
    def debug(self, message: str, *args, **kwargs) -> None:
        """Log a debug message"""
        self._log("DEBUG", message, *args, **kwargs)
    
    def info(self, message: str, *args, **kwargs) -> None:
        """Log an info message"""
        self._log("INFO", message, *args, **kwargs)
    
    def success(self, message: str, *args, **kwargs) -> None:
        """Log a success message"""
        self._log("SUCCESS", message, *args, **kwargs)
    
    def warning(self, message: str, *args, **kwargs) -> None:
        """Log a warning message"""
        self._log("WARNING", message, *args, **kwargs)
    
    def error(self, message: str, *args, **kwargs) -> None:
        """Log an error message"""
        self._log("ERROR", message, *args, **kwargs)
    
    def critical(self, message: str, *args, **kwargs) -> None:
        """Log a critical message"""
        self._log("CRITICAL", message, *args, **kwargs)
    
    def _log(self, level: str, message: str, *args, **kwargs) -> None:
        """Internal logging method"""
        # TODO: Implement logging logic
        print(f"{level}: {message}")
    
    def bind(self, **kwargs) -> 'Logger':
        """Create a bound logger with extra context"""
        # TODO: Implement bind
        pass
    
    def contextualize(self, **kwargs):
        """Create a context manager with extra context"""
        # TODO: Implement contextualize
        pass
    
    def catch(self, exception=Exception, **kwargs):
        """Decorator to catch exceptions"""
        # TODO: Implement catch decorator
        pass
    
    def opt(self, **kwargs) -> 'Logger':
        """Return logger with options"""
        # TODO: Implement opt
        pass
