"""
Log retention policies
"""

from pathlib import Path
from typing import Optional
from datetime import timedelta


class Retention:
    """Manage log file retention"""
    
    def __init__(self, count: Optional[int] = None, age: Optional[timedelta] = None, 
                 total_size: Optional[int] = None):
        self.count = count
        self.age = age
        self.total_size = total_size
        
    def clean_old_files(self, directory: Path) -> None:
        """Remove old log files based on policy"""
        # TODO: Implement retention cleanup
        pass
    
    def should_delete(self, file: Path) -> bool:
        """Check if file should be deleted"""
        # TODO: Implement deletion check
        return False
